<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/search_item_name_label"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/search_item_name_label_text"
        android:theme="@style/AppTextViewLabel" />

    <EditText
        android:id="@+id/search_item_name_edit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/search_item_name_label"
        android:layout_toRightOf="@+id/search_item_name_label"
        android:hint="@string/search_item_name_edit_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/search_manufacturer_label"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_item_name_label"
        android:text="@string/search_manufacturer_label_text"
        android:theme="@style/AppTextViewLabel" />

    <Spinner
        android:id="@+id/search_manufacturer_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_item_name_edit"
        android:layout_toEndOf="@+id/search_manufacturer_label"
        android:layout_toRightOf="@+id/search_manufacturer_label" />

    <TextView
        android:id="@+id/search_operating_system_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_manufacturer_label"
        android:text="@string/search_operating_system_label_text"
        android:theme="@style/AppTextViewLabel" />

    <CheckBox
        android:id="@+id/search_os_ios_checkbox"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_operating_system_label"
        android:text="@string/search_os_ios_checkbox_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/search_os_android_checkbox"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_operating_system_label"
        android:layout_toEndOf="@+id/search_os_ios_checkbox"
        android:layout_toRightOf="@+id/search_os_ios_checkbox"
        android:checked="true"
        android:text="@string/search_os_android_checkbox_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/search_os_blackberry_checkbox"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_os_ios_checkbox"
        android:text="@string/search_os_blackberry_checkbox_text" >
    </CheckBox>

    <CheckBox
        android:id="@+id/search_os_windows_checkbox"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_os_android_checkbox"
        android:layout_toEndOf="@+id/search_os_blackberry_checkbox"
        android:layout_toRightOf="@+id/search_os_blackberry_checkbox"
        android:text="@string/search_os_windows_checkbox_text" >
    </CheckBox>

    <TextView
        android:id="@+id/search_inventory_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/search_os_blackberry_checkbox"
        android:text="@string/search_inventory_label_text"
        android:theme="@style/AppTextViewLabel" />

    <RadioGroup
        android:id="@+id/search_inventory_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_inventory_label"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/search_inventory_all_radio_button"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/search_inventory_all_radio_button_text" >
        </RadioButton>

        <RadioButton
            android:id="@+id/search_inventory_in_stock_radio_button"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:text="@string/search_inventory_in_stock_radio_button_text" >
        </RadioButton>

        <RadioButton
            android:id="@+id/search_inventory_out_of_stock_radio_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/search_inventory_out_of_stock_radio_button_text" >
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/search_search_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/search_item_name_edit"
        android:layout_alignLeft="@+id/search_item_name_label"
        android:layout_alignRight="@+id/search_item_name_edit"
        android:layout_alignStart="@+id/search_item_name_label"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/search_inventory_radio_group"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/search_search_button_text" />

</RelativeLayout>