<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/login_username_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_username_label_text"
            android:theme="@style/AppTextViewLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
             />

        <EditText
            android:id="@+id/login_username_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_username_edit_hint"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/login_username_label"
            />

        <TextView
            android:id="@+id/login_password_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_password_label_text"
            android:theme="@style/AppTextViewLabel"
            app:layout_constraintTop_toBottomOf="@+id/login_username_label"
            app:layout_constraintLeft_toLeftOf="parent"
             />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_edit_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/login_username_edit"
            app:layout_constraintLeft_toRightOf="@+id/login_password_label"
             />

        <Button
            android:id="@+id/login_sign_in_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_sign_in_button_text"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" >

        <ImageView
            android:id="@+id/login_logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/mobile_labs_logo"
            android:contentDescription="@string/login_logo_image_description"/>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>